fix(discover): fix overflowing tags during rendering process causing zoomed browsers (i.e. ios safari) to bug

--- a/app/client/stylesheets/components/pu-wrap.sass
+++ b/app/client/stylesheets/components/pu-wrap.sass
@@ -10,6 +10,7 @@
         max-width: grid(12) + $spacing-app-pagepadding * 2
 
     &-columnlayout
+        overflow: hidden
         max-width: grid(10) + $spacing-app-pagepadding * 2
 
         $columns_threshold: grid(11) + $spacing-app-pagepadding * 2 // Be sure to keep discover-page.js (amountOfColumns helper) up-to-date with this.
